fix: prevent map overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,14 @@
 @tailwind utilities;
 
 @import '~leaflet/dist/leaflet.css';
+
+.leaflet-control {
+  z-index: 0 !important;
+}
+.leaflet-pane {
+  z-index: 0 !important;
+}
+.leaflet-top,
+.leaflet-bottom {
+  z-index: 0 !important;
+}
